snapshots/test__act_on_file@.__tests__repositories__DeepSpeech__native_client__ctcdecode__third_party__openfst-1.6.9-win__src__extensions__far__farequal.cc.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: Some(
        "./tests/repositories/DeepSpeech/native_client/ctcdecode/third_party/openfst-1.6.9-win/src/extensions/far/farequal.cc",
    ),
    start_line: 1,
    end_line: 42,
    kind: Unit,
    spaces: [],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 0,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 0,
            closure_nargs_max: 0,
            total_functions: 0,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 3,
            exit_sum: 3,
            total_space_functions: 0,
            exit_min: 3,
            exit_max: 3,
        },
        cognitive: Stats {
            structural: 3,
            structural_sum: 3,
            structural_min: 3,
            structural_max: 3,
            nesting: 0,
            total_space_functions: 0,
            boolean_seq: BoolSequence {
                boolean_op: Some(
                    349,
                ),
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 5.0,
            cyclomatic: 5.0,
            n: 1,
            cyclomatic_max: 5.0,
            cyclomatic_min: 5.0,
        },
        halstead: Stats {
            u_operators: 19,
            operators: 94,
            u_operands: 41,
            operands: 68,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 42,
                unit: true,
                sloc_min: 42,
                sloc_max: 42,
            },
            ploc: Ploc {
                lines: {
                    32,
                    29,
                    26,
                    41,
                    20,
                    17,
                    14,
                    11,
                    8,
                    5,
                    40,
                    28,
                    25,
                    22,
                    19,
                    16,
                    13,
                    7,
                    36,
                    33,
                    30,
                    27,
                    24,
                    21,
                    12,
                    9,
                    38,
                    35,
                },
                ploc_min: 28,
                ploc_max: 28,
            },
            cloc: Cloc {
                only_comment_lines: 4,
                code_comment_lines: 0,
                comment_line_end: Some(
                    3,
                ),
                cloc_min: 4,
                cloc_max: 4,
            },
            lloc: Lloc {
                logical_lines: 21,
                lloc_min: 21,
                lloc_max: 21,
            },
            space_count: 1,
            blank_min: 10,
            blank_max: 10,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 0,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 0,
            closures_min: 0,
            closures_max: 0,
            space_count: 1,
        },
        mi: Stats {
            halstead_length: 162.0,
            halstead_vocabulary: 60.0,
            halstead_volume: 956.91627648858,
            cyclomatic: 5.0,
            sloc: 42.0,
            comments_percentage: 0.09523809523809523,
        },
        abc: Stats {
            assignments: 0.0,
            assignments_sum: 0.0,
            assignments_min: 0.0,
            assignments_max: 0.0,
            branches: 0.0,
            branches_sum: 0.0,
            branches_min: 0.0,
            branches_max: 0.0,
            conditions: 0.0,
            conditions_sum: 0.0,
            conditions_min: 0.0,
            conditions_max: 0.0,
            space_count: 1,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.0,
            class_wmc: 0.0,
            interface_wmc: 0.0,
            class_wmc_sum: 0.0,
            interface_wmc_sum: 0.0,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: false,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: false,
        },
    },
}
