snapshots/test__act_on_file@.__tests__repositories__DeepSpeech__native_client__ctcdecode__third_party__openfst-1.6.9-win__src__extensions__far__stlist.cc.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: Some(
        "./tests/repositories/DeepSpeech/native_client/ctcdecode/third_party/openfst-1.6.9-win/src/extensions/far/stlist.cc",
    ),
    start_line: 1,
    end_line: 19,
    kind: Unit,
    spaces: [
        FuncSpace {
            name: Some(
                "fst",
            ),
            start_line: 9,
            end_line: 19,
            kind: Namespace,
            spaces: [
                FuncSpace {
                    name: Some(
                        "IsSTList",
                    ),
                    start_line: 11,
                    end_line: 17,
                    kind: Function,
                    spaces: [],
                    metrics: CodeMetrics {
                        nargs: Stats {
                            fn_nargs: 1,
                            closure_nargs: 0,
                            fn_nargs_sum: 1,
                            closure_nargs_sum: 0,
                            fn_nargs_min: 1,
                            closure_nargs_min: 0,
                            fn_nargs_max: 1,
                            closure_nargs_max: 0,
                            total_functions: 1,
                            total_closures: 0,
                        },
                        nexits: Stats {
                            exit: 2,
                            exit_sum: 2,
                            total_space_functions: 1,
                            exit_min: 2,
                            exit_max: 2,
                        },
                        cognitive: Stats {
                            structural: 1,
                            structural_sum: 1,
                            structural_min: 1,
                            structural_max: 1,
                            nesting: 0,
                            total_space_functions: 1,
                            boolean_seq: BoolSequence {
                                boolean_op: Some(
                                    349,
                                ),
                            },
                        },
                        cyclomatic: Stats {
                            cyclomatic_sum: 2.0,
                            cyclomatic: 2.0,
                            n: 1,
                            cyclomatic_max: 2.0,
                            cyclomatic_min: 2.0,
                        },
                        halstead: Stats {
                            u_operators: 13,
                            operators: 27,
                            u_operands: 13,
                            operands: 18,
                        },
                        loc: Stats {
                            sloc: Sloc {
                                start: 10,
                                end: 16,
                                unit: false,
                                sloc_min: 7,
                                sloc_max: 7,
                            },
                            ploc: Ploc {
                                lines: {
                                    16,
                                    13,
                                    10,
                                    15,
                                    12,
                                    14,
                                    11,
                                },
                                ploc_min: 7,
                                ploc_max: 7,
                            },
                            cloc: Cloc {
                                only_comment_lines: 0,
                                code_comment_lines: 0,
                                comment_line_end: None,
                                cloc_min: 0,
                                cloc_max: 0,
                            },
                            lloc: Lloc {
                                logical_lines: 6,
                                lloc_min: 6,
                                lloc_max: 6,
                            },
                            space_count: 1,
                            blank_min: 0,
                            blank_max: 0,
                        },
                        nom: Stats {
                            functions: 1,
                            closures: 0,
                            functions_sum: 1,
                            closures_sum: 0,
                            functions_min: 1,
                            functions_max: 1,
                            closures_min: 0,
                            closures_max: 0,
                            space_count: 1,
                        },
                        mi: Stats {
                            halstead_length: 45.0,
                            halstead_vocabulary: 26.0,
                            halstead_volume: 211.51978731634912,
                            cyclomatic: 2.0,
                            sloc: 7.0,
                            comments_percentage: 0.0,
                        },
                        abc: Stats {
                            assignments: 0.0,
                            assignments_sum: 0.0,
                            assignments_min: 0.0,
                            assignments_max: 0.0,
                            branches: 0.0,
                            branches_sum: 0.0,
                            branches_min: 0.0,
                            branches_max: 0.0,
                            conditions: 0.0,
                            conditions_sum: 0.0,
                            conditions_min: 0.0,
                            conditions_max: 0.0,
                            space_count: 1,
                            declaration: [],
                        },
                        wmc: Stats {
                            cyclomatic: 0.0,
                            class_wmc: 0.0,
                            interface_wmc: 0.0,
                            class_wmc_sum: 0.0,
                            interface_wmc_sum: 0.0,
                            space_kind: Unknown,
                        },
                        npm: Stats {
                            class_npm: 0,
                            interface_npm: 0,
                            class_nm: 0,
                            interface_nm: 0,
                            class_npm_sum: 0,
                            interface_npm_sum: 0,
                            class_nm_sum: 0,
                            interface_nm_sum: 0,
                            is_class_space: false,
                        },
                        npa: Stats {
                            class_npa: 0,
                            interface_npa: 0,
                            class_na: 0,
                            interface_na: 0,
                            class_npa_sum: 0,
                            interface_npa_sum: 0,
                            class_na_sum: 0,
                            interface_na_sum: 0,
                            is_class_space: false,
                        },
                    },
                },
            ],
            metrics: CodeMetrics {
                nargs: Stats {
                    fn_nargs: 0,
                    closure_nargs: 0,
                    fn_nargs_sum: 1,
                    closure_nargs_sum: 0,
                    fn_nargs_min: 0,
                    closure_nargs_min: 0,
                    fn_nargs_max: 1,
                    closure_nargs_max: 0,
                    total_functions: 1,
                    total_closures: 0,
                },
                nexits: Stats {
                    exit: 0,
                    exit_sum: 2,
                    total_space_functions: 1,
                    exit_min: 0,
                    exit_max: 2,
                },
                cognitive: Stats {
                    structural: 0,
                    structural_sum: 1,
                    structural_min: 0,
                    structural_max: 1,
                    nesting: 0,
                    total_space_functions: 1,
                    boolean_seq: BoolSequence {
                        boolean_op: None,
                    },
                },
                cyclomatic: Stats {
                    cyclomatic_sum: 3.0,
                    cyclomatic: 1.0,
                    n: 2,
                    cyclomatic_max: 2.0,
                    cyclomatic_min: 1.0,
                },
                halstead: Stats {
                    u_operators: 13,
                    operators: 28,
                    u_operands: 14,
                    operands: 19,
                },
                loc: Stats {
                    sloc: Sloc {
                        start: 8,
                        end: 18,
                        unit: false,
                        sloc_min: 7,
                        sloc_max: 7,
                    },
                    ploc: Ploc {
                        lines: {
                            16,
                            13,
                            10,
                            14,
                            11,
                            8,
                            18,
                            15,
                            12,
                        },
                        ploc_min: 7,
                        ploc_max: 7,
                    },
                    cloc: Cloc {
                        only_comment_lines: 0,
                        code_comment_lines: 0,
                        comment_line_end: None,
                        cloc_min: 0,
                        cloc_max: 0,
                    },
                    lloc: Lloc {
                        logical_lines: 6,
                        lloc_min: 6,
                        lloc_max: 6,
                    },
                    space_count: 2,
                    blank_min: 0,
                    blank_max: 0,
                },
                nom: Stats {
                    functions: 0,
                    closures: 0,
                    functions_sum: 1,
                    closures_sum: 0,
                    functions_min: 0,
                    functions_max: 1,
                    closures_min: 0,
                    closures_max: 0,
                    space_count: 2,
                },
                mi: Stats {
                    halstead_length: 47.0,
                    halstead_vocabulary: 27.0,
                    halstead_volume: 223.47971260168302,
                    cyclomatic: 3.0,
                    sloc: 11.0,
                    comments_percentage: 0.0,
                },
                abc: Stats {
                    assignments: 0.0,
                    assignments_sum: 0.0,
                    assignments_min: 0.0,
                    assignments_max: 0.0,
                    branches: 0.0,
                    branches_sum: 0.0,
                    branches_min: 0.0,
                    branches_max: 0.0,
                    conditions: 0.0,
                    conditions_sum: 0.0,
                    conditions_min: 0.0,
                    conditions_max: 0.0,
                    space_count: 2,
                    declaration: [],
                },
                wmc: Stats {
                    cyclomatic: 0.0,
                    class_wmc: 0.0,
                    interface_wmc: 0.0,
                    class_wmc_sum: 0.0,
                    interface_wmc_sum: 0.0,
                    space_kind: Unknown,
                },
                npm: Stats {
                    class_npm: 0,
                    interface_npm: 0,
                    class_nm: 0,
                    interface_nm: 0,
                    class_npm_sum: 0,
                    interface_npm_sum: 0,
                    class_nm_sum: 0,
                    interface_nm_sum: 0,
                    is_class_space: false,
                },
                npa: Stats {
                    class_npa: 0,
                    interface_npa: 0,
                    class_na: 0,
                    interface_na: 0,
                    class_npa_sum: 0,
                    interface_npa_sum: 0,
                    class_na_sum: 0,
                    interface_na_sum: 0,
                    is_class_space: false,
                },
            },
        },
    ],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 1,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 1,
            closure_nargs_max: 0,
            total_functions: 1,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 0,
            exit_sum: 2,
            total_space_functions: 1,
            exit_min: 0,
            exit_max: 2,
        },
        cognitive: Stats {
            structural: 0,
            structural_sum: 1,
            structural_min: 0,
            structural_max: 1,
            nesting: 0,
            total_space_functions: 1,
            boolean_seq: BoolSequence {
                boolean_op: None,
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 4.0,
            cyclomatic: 1.0,
            n: 3,
            cyclomatic_max: 2.0,
            cyclomatic_min: 1.0,
        },
        halstead: Stats {
            u_operators: 13,
            operators: 28,
            u_operands: 14,
            operands: 19,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 19,
                unit: true,
                sloc_min: 11,
                sloc_max: 11,
            },
            ploc: Ploc {
                lines: {
                    16,
                    13,
                    10,
                    14,
                    11,
                    8,
                    5,
                    18,
                    15,
                    12,
                    6,
                    3,
                },
                ploc_min: 9,
                ploc_max: 9,
            },
            cloc: Cloc {
                only_comment_lines: 2,
                code_comment_lines: 1,
                comment_line_end: Some(
                    1,
                ),
                cloc_min: 0,
                cloc_max: 0,
            },
            lloc: Lloc {
                logical_lines: 6,
                lloc_min: 6,
                lloc_max: 6,
            },
            space_count: 3,
            blank_min: 2,
            blank_max: 2,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 1,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 1,
            closures_min: 0,
            closures_max: 0,
            space_count: 3,
        },
        mi: Stats {
            halstead_length: 47.0,
            halstead_vocabulary: 27.0,
            halstead_volume: 223.47971260168302,
            cyclomatic: 4.0,
            sloc: 19.0,
            comments_percentage: 0.15789473684210525,
        },
        abc: Stats {
            assignments: 0.0,
            assignments_sum: 0.0,
            assignments_min: 0.0,
            assignments_max: 0.0,
            branches: 0.0,
            branches_sum: 0.0,
            branches_min: 0.0,
            branches_max: 0.0,
            conditions: 0.0,
            conditions_sum: 0.0,
            conditions_min: 0.0,
            conditions_max: 0.0,
            space_count: 3,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.0,
            class_wmc: 0.0,
            interface_wmc: 0.0,
            class_wmc_sum: 0.0,
            interface_wmc_sum: 0.0,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: false,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: false,
        },
    },
}
